Add font-awesome and bootstrap styles (#8)

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,3 +5,5 @@
 <li>
   <ul *ngFor="let person of people">{{person.firstname}} - {{person.lastname}}</ul>
 </li>
+<button class="btn btn-primary">Button</button>
+<i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
