--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <p>{{title}} is active!</p>
 <hr>
 <br>
@@ -6,4 +7,5 @@
   <ul *ngFor="let person of people">{{person.firstname}} - {{person.lastname}}</ul>
 </li>
 <button class="btn btn-primary">Button</button>
-<i class="fa fa-american-sign-language-interpreting fa-5x" aria-hidden="true"> </i>
+
+<app-footer></app-footer>
