Add registration functionality (#33)
* Registration setup for backend (added registration methods in business and repository layers)

* Create registration form

* Connect registration from with backend

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,3 @@
 <app-header></app-header>
-<p>{{title}} is active!</p>
-<hr>
-<br>
-<p>List of persons: </p>
-<button class="btn btn-primary">Button</button>
-
+<router-outlet></router-outlet>
 <app-footer></app-footer>
